# pyretinanet-tensorrt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: inference.py
python/: .gitignore  setup.py
python/pyretinanet/: __init__.py
src/: pyretinanetcpp.cpp
